--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 :root {
-    --branco-principal: #FFFFFF;
+    --branco-principal: #ffffff;
     --cinza-secundario: #c0c0c0;
-    --botao-azul: #167BF7;
-    --cor-de-fundo: #00030c;
+    --botao-azul: #167bf7;
+    --cor-de-fudo: #00030c;
 }
     
 body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-}
-    
-* {
-    margin:0;
-    padding:0;
+background-color: var(--cor-de-fudo)
 }
 
+*{
+margin:0;
+padding:0;
+}
 
+#botao:hover {
+transform: scale(1.08);
+transition: transform 200ms linear;
+}
 
-#button:hover{
-    transform: (1.1);
-
+#botao2:hover {
+transform: scale(1.08);
+transition: transform 200ms linear;
 }
